--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
   ],
   "require": {
     "php": ">=7.0",
-    "composer/installers": "~1.2"
+    "composer/installers": "~1.2",
+    "monolog/monolog": "^1.19"
   }
 }
