--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "keltiecochrane/themosis-logger",
-  "description": "A logger for themosis.",
-  "keywords": ["themosis", "plugin"],
+  "description": "Monolog for Themosis",
+  "keywords": ["themosis"],
   "authors": [
     {
       "name": "Daniel Gadd",
@@ -14,7 +14,6 @@
       "homepage": "https://keltiecochrane.com"
     }
   ],
-  "type": "wordpress-plugin",
   "repositories": [
     {
       "type": "composer",
@@ -25,5 +24,10 @@
     "php": ">=7.0",
     "composer/installers": "~1.2",
     "monolog/monolog": "^1.19"
+  },
+  "autoload": {
+    "psr-4": {
+      "KeltieCochrane\\Logger\\": "./src/"
+    }
   }
 }
