--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "keltiecochrane/themosis-logger",
   "description": "Monolog for Themosis",
+  "license": "GPL-3.0",
   "keywords": ["themosis"],
   "authors": [
     {
@@ -23,11 +24,16 @@
   "require": {
     "php": ">=7.0",
     "composer/installers": "~1.2",
+    "themosis/framework": "^1.3",
+    "keltiecochrane/themosis-illuminate": "^1.0",
     "monolog/monolog": "^1.19"
   },
   "autoload": {
     "psr-4": {
       "KeltieCochrane\\Logger\\": "./src/"
-    }
+    },
+    "files": [
+      "./src/helpers.php"
+    ]
   }
 }
