--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "keltiecochrane/themosis-logger",
+  "name": "djgadd/themosis-logger",
   "description": "Monolog for Themosis",
   "license": "GPL-3.0",
   "keywords": ["themosis"],
