--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "djgadd/themosis-logger",
   "description": "Monolog for Themosis",
-  "license": "GPL-3.0",
+  "license": "GPL-3.0-or-later",
   "keywords": ["themosis"],
   "authors": [
     {
